[gd_scene load_steps=4 format=3 uid="uid://bipohfp6birf5"]

[ext_resource type="Script" path="res://Instances/UI/UpgradeSelection/UpgradeSelector.gd" id="1_exuln"]
[ext_resource type="AudioStream" uid="uid://cwuthsoolsen5" path="res://Assets/Audios/Confirm-upgrade.ogg" id="9_h34gq"]
[ext_resource type="AudioStream" uid="uid://bu7ctpa77iw66" path="res://Assets/Audios/levelUp.mp3" id="10_ovjur"]

[node name="UpgradeSelector" type="PanelContainer"]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.5
offset_top = -273.0
offset_right = 260.5
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_exuln")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 2
theme_type_variation = &"PanelBackground"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "LEVEL UP"
horizontal_alignment = 1

[node name="OptionList" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30

[node name="AudioPlayerSelectUpgrade" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_h34gq")
bus = &"Sound"

[node name="AudioPlayerLevelUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_ovjur")
bus = &"Sound"
